Version 5.8.0 - 2020-11-02
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5
* Add with agent option to credit invoice
* Add employee on agent selection

Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Add Agent selection

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Remove support for Python 2.7

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Check pending commission to erase party
* Match also with parent categories

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Don't match product and category lines when product is empty

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Add category as plan matching criteria

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Add Python3 support

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)
* Rename default_principal property into principal

Version 3.6.0 - 2015-04-20
* Initial release